✨ s3 업로드후 api 버전 업데이트

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,7 @@
 python -m venv venv
 source venv/bin/activate
+
+# define ENV_VAR
+# export API_URL=http://localhost:3000/server/v1/adm_versions
+# export ACCESSS_TOKEN=xxxxxxx
+[ -s ".envrc.local" ] && source_env ".envrc.local"
